@@ -53,13 +53,16 @@ Appearance2Page::Appearance2Page(SmartWin::Widget* parent) : PropPage(parent) {
 
 	PropPage::translate(handle(), texts);
 	PropPage::read(handle(), items, 0, 0);
-	WinUtil::decodeFont(Text::toT(SETTING(TEXT_FONT)), font);
+
 	fg = SETTING(TEXT_COLOR);
 	bg = SETTING(BACKGROUND_COLOR);
-	bgBrush = SmartWin::BrushPtr(new SmartWin::Brush(bg));
-	fontObj = ::CreateFontIndirect(&font);
 	upBar = SETTING(UPLOAD_BAR_COLOR);
 	downBar = SETTING(DOWNLOAD_BAR_COLOR);
+
+	bgBrush = SmartWin::BrushPtr(new SmartWin::Brush(bg));
+
+	WinUtil::decodeFont(Text::toT(SETTING(TEXT_FONT)), logFont);
+	font = SmartWin::FontPtr(new SmartWin::Font(::CreateFontIndirect(&logFont), true));
 
 	example = subclassStatic(IDC_COLOREXAMPLE);
 	example->onBackgroundColor(std::tr1::bind(&Appearance2Page::handleExampleColor, this, _1));
@@ -80,13 +83,10 @@ Appearance2Page::Appearance2Page(SmartWin::Widget* parent) : PropPage(parent) {
 	button->onClicked(std::tr1::bind(&Appearance2Page::handleBrowseClicked, this));
 }
 
-Appearance2Page::~Appearance2Page()
-{
-	::DeleteObject(fontObj);
+Appearance2Page::~Appearance2Page() {
 }
 
-void Appearance2Page::write()
-{
+void Appearance2Page::write() {
 	PropPage::write(handle(), items, 0,0);
 
 	SettingsManager* settings = SettingsManager::getInstance();
@@ -95,15 +95,13 @@ void Appearance2Page::write()
 	settings->set(SettingsManager::BACKGROUND_COLOR, (int)bg);
 	settings->set(SettingsManager::UPLOAD_BAR_COLOR, (int)upBar);
 	settings->set(SettingsManager::DOWNLOAD_BAR_COLOR, (int)downBar);
-
-	tstring f = WinUtil::encodeFont(font);
-	settings->set(SettingsManager::TEXT_FONT, Text::fromT(f));
+	settings->set(SettingsManager::TEXT_FONT, Text::fromT(WinUtil::encodeFont(logFont)));
 }
 
 SmartWin::BrushPtr Appearance2Page::handleExampleColor(SmartWin::Canvas& canvas) {
 	canvas.setBkColor(bg);
 	canvas.setTextColor(fg);
-	::SelectObject(canvas.handle(), fontObj);
+	canvas.selectFont(font);
 	return bgBrush;
 }
 
@@ -118,13 +116,12 @@ void Appearance2Page::handleBackgroundClicked() {
 }
 
 void Appearance2Page::handleTextClicked() {
-	LOGFONT font_ = font;
+	LOGFONT logFont_ = logFont;
 	DWORD fg_ = fg;
-	if(createChooseFont().showDialog(CF_EFFECTS | CF_SCREENFONTS, &font_, fg_)) {
-		font = font_;
+	if(createChooseFont().showDialog(CF_EFFECTS | CF_SCREENFONTS, &logFont_, fg_)) {
+		logFont = logFont_;
 		fg = fg_;
-		::DeleteObject(fontObj);
-		fontObj = ::CreateFontIndirect(&font);
+		font = SmartWin::FontPtr(new SmartWin::Font(::CreateFontIndirect(&logFont), true));
 		example->invalidateWidget();
 	}
 }
