@@ -38,8 +38,8 @@ private:
 
 	COLORREF fg, bg, upBar, downBar;
 	SmartWin::BrushPtr bgBrush;
-	HFONT fontObj;
-	LOGFONT font;
+	SmartWin::FontPtr font;
+	LOGFONT logFont;
 
 	SmartWin::BrushPtr handleExampleColor(SmartWin::Canvas& canvas);
 	void handleBackgroundClicked();
